<resources>
    <string name="app_name">JukeBot</string>
    <string name="login">LOGIN</string>
    <string name="jukebot">JukeBot</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_password">Confirm password</string>
    <string name="username">username</string>
    <string name="create">Create</string>
    <string name="continue_anonymously"><u>Continue anonymously</u></string>
</resources>